apps/saralJobViewer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saral
  labels:
    app.kubernetes.io/part-of: saralJobViewer
